# gazebo_radiation_plugin

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  README_from_gazebo_custom_sensor_preloader.md  package.xml  radiation_sensor.xml  radiation_source.xml
blender_scripts/: export_to_dae.py  remove_empty_models.py
configs/: attentuation.yaml  sensors.yaml  sources.yaml
custom_models/: hollow_barrel_inner.sdf  hollow_barrel_outer.sdf  test_barrel.sdf
custom_models/REEL/: README.txt  REEL.world
custom_models/REEL/models/: Body1.001.dae  Body1.002.dae  Body1.003.dae  Body1.004.dae  Body1.005.dae  Body1.006.dae  Body1.007.dae  Body1.008.dae  Body1.009.dae  Body1.010.dae  Body1.011.dae  Body1.012.dae  Body1.013.dae  Body1.014.dae  Body1.015.dae  Body1.016.dae  Body1.017.dae  Body1.018.dae  Body1.019.dae  Body1.020.dae  Body1.021.dae  Body1.022.dae  Body1.023.dae  Body1.024.dae  Body1.025.dae  Body1.026.dae  Body1.027.dae  Body1.028.dae  Body1.029.dae  Body1.030.dae  Body1.031.dae  Body1.032.dae  Body1.033.dae  Body1.034.dae  Body1.035.dae  Body1.036.dae  Body1.037.dae  Body1.038.dae  Body1.039.dae  Body1.040.dae  (+35 more)
custom_models/andy1/: challenge1.world  updated_challenge1.world
custom_models/andy1/configs/: attentuation.yaml  radiation_double.yaml  radiation_single.yaml  sensor_collimated.yaml  sensor_sensitivity_func.yaml  sensor_sensitivity_func_double.yaml  sensor_uncollimated.yaml
custom_models/andy1/models/: barrel_1.dae
custom_models/andy1/template/: subset_template.yaml  template_end.sdf
custom_models/andy1/yamls/: barrel_0.yaml  barrel_1.yaml  cylinder_0.yaml
custom_models/andy2/: andy2.tiff  andy2.world  updated_andy2.world
custom_models/andy2/configs/: attentuation.yaml  radiation.yaml  sensors.yaml  subset.yaml
custom_models/andy2/models/: all_models.txt
custom_models/andy2/yamls/: cylinder_102.yaml  cylinder_129.yaml  cylinder_165.yaml  cylinder_48.yaml  cylinder_67.yaml  cylinder_84.yaml  example.yaml
custom_models/barrel_store_custom/: barrel_store_custom.world  barrelstore.tiff  updated_barrel_store_custom_10_sources (copy).world  updated_barrel_store_custom_10_sources.world  updated_barrel_store_custom_bk.world
custom_models/barrel_store_custom/configs/: radiation.yaml  sensors.yaml
custom_models/barrel_store_custom/models/: all_models.txt  barrel_0.dae  barrel_1.dae  barrel_10.dae  barrel_11.dae  barrel_12.dae  barrel_13.dae  barrel_14.dae  barrel_15.dae  barrel_16.dae  barrel_17.dae  barrel_18.dae  barrel_19.dae  barrel_2.dae  barrel_20.dae  barrel_21.dae  barrel_22.dae  barrel_23.dae  barrel_24.dae  barrel_25.dae  barrel_26.dae  barrel_27.dae  barrel_28.dae  barrel_29.dae  barrel_3.dae  barrel_30.dae  barrel_31.dae  barrel_32.dae  barrel_33.dae  barrel_34.dae  barrel_35.dae  barrel_36.dae  barrel_37.dae  barrel_38.dae  barrel_39.dae  barrel_4.dae  barrel_40.dae  barrel_41.dae  barrel_42.dae  barrel_43.dae  (+34 more)
custom_models/barrel_store_custom/yamls/: barrel_1.yaml  barrel_15.yaml  barrel_17.yaml  barrel_18.yaml  barrel_20.yaml  barrel_25.yaml  barrel_27.yaml  barrel_29.yaml  barrel_37.yaml  barrel_38.yaml  barrel_40.yaml  barrel_43.yaml  barrel_45.yaml  barrel_47.yaml  barrel_52.yaml  barrel_54.yaml  barrel_57.yaml  barrel_61.yaml  barrel_65.yaml  barrel_67.yaml  barrel_7.yaml  subset.yaml
custom_models/base_environment/: barrelstore.tiff  base_environment.world  culham_environment.world  updated_base_environment.world
custom_models/base_environment/configs/: radiation.yaml  sensors.yaml  subset.yaml
custom_models/base_environment/models/: all_models.txt
custom_models/base_environment/yamls/: barrel_1.yaml  cylinder_114.yaml  (+3 more)
custom_models/box_world/: boxes_world.world
custom_models/challenge2/: challenge2.tiff  challenge2.world  radiation.yaml
custom_models/challenge3/: challenge2.world
custom_models/empty_environment/: empty.world  empty_bk.world
custom_models/lancaster/: lancaster.tiff  lancaster.world
custom_models/reactor_room/: reactor_room.sdf  reactor_room2.world  updated_reactor_room.sdf  updated_reactor_room2.world
custom_models/test_world/: test_world.world  updated_test_world.world
data/old/: data_100_2.csv
example_radiation_sources/: source_0.sdf  source_1.sdf  source_2.sdf  source_3.sdf  source_4.sdf  source_5.sdf  source_6.sdf
include/gazebo_radiation_plugins/: CustomSensorPreloader.h  RadiationSensor.h  RadiationSensorPlugin.h  RadiationSource.h  RadiationSourcePlugin.h
launch/: custom_description.launch  defunct.launch  gmapping_movebase.launch  move_base.launch  radiation_demonstrator.launch  radiation_mapping.launch  radiation_mapping_barrel_env.launch  radmap.launch  radmap_barrel_env.launch
launch/params/: costmap_common_params.yaml  global_costmap_params.yaml  radmap_params.yaml  radmap_params_barrel_env.yaml
launch/rviz_config/: husky_radiation_mapping.rviz
models/: radiation_sensor.sdf  radiation_source.sdf
msg/: Simulated_Radiation_Msg.msg
scripts/: convert_world_builder_model.py  gazebo.in  generate_model_lists.py  generate_radiation_sources.py  generate_random_environment_effects.py  generate_world_from_models.py  generate_yamls_for_world.py  gzserver.in  load_radiation_sources.py  mass_yaml_loader.py  model_evolver.py  model_mover.py  model_mover_grid.py  model_mover_line.py  model_mover_rotation.py  source_sensor_test_barrel_store.py  source_sensor_test_linear.py
scripts/depreciated/: generate_world_from_dae_multiple_models.py  generate_world_from_dae_single_models.py  load_batch_models.py
sdf/: radiation_sensor.sdf  radiation_sensor_alt.sdf  radiation_source.sdf
sources/: source_0.sdf  source_1.sdf  source_2.sdf  source_3.sdf  source_4.sdf  source_5.sdf  source_6.sdf
src/: CustomSensorPreloader.cpp  RadiationSensor.cpp  RadiationSensorPlugin.cpp  RadiationSource.cpp  RadiationSourcePlugin.cpp
srv/: ConvertWorldBuilderModel.srv  EnvironmentEvolver.srv  GenRandomEnvironmentalEffects.srv  GenWorldsFromModels.srv  GenYamlsFromWorld.srv  MassYamlLoader.srv
templates/: radiation_sensor.sdf  radiation_source.sdf
urdf/: custom.urdf  jackal.urdf.xacro
(+121 files in other folders)
