<?xml version="1.0"?>
<package format="2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://download.ros.org/schema/package_format2.xsd">
  <name>gazebo_radiation_plugins</name>
  <version>1.0.1</version>
  <description>Gazebo plugin for radiation sources and sensors.</description>

  <license>BSD</license>
  <url>https://github.com/EEEManchester/gazebo_radiation_plugins</url>

  <maintainer  email="thomas.wright@manchester.ac.uk">Thomas Wright</maintainer>
  <author email="thomas.wright@manchester.ac.uk">Thomas Wright</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>

  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros_cpp</build_depend>
  <build_depend>message_generation</build_depend>


  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rosbash</exec_depend>

  <!--
    In your own custom sensor implementations, you'll also have to add
    <exec_depend>gazebo_radiation_plugins</exec_depend>
  -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/custom_models" />
    <gazebo_radiation_plugins plugin="${prefix}/radiation_source.xml" />
    <gazebo_radiation_plugins plugin="${prefix}/radiation_sensor.xml" />
     
    
  </export>

</package>
